# Cookie-Engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ReadMe.md  imgui.ini
Assets/: Mod_Base.gltf  Mod_Catapulte.gltf  Mod_Cookie.gltf  Mod_House.gltf  Mod_Soldier.gltf  Mod_Tier1.gltf  Mod_Tier2.gltf
Assets/AIBehaviors/: Test1.AIBAsset  Test2.AIBAsset
Assets/Animation/: Anim_CookieRun.gltf
Assets/Music/: Death.MAsset  No_Resource.MAsset
Assets/Prefabs/: Catapulte.PAsset  Gunner.PAsset  Plane.PAsset  ResourcePrimary.PAsset  Tower.PAsset
Assets/Textures/: Blue.TAsset  Grey.TAsset  Red.TAsset  White.TAsset
Assets/UI/: IconBase.tif  IconCarriereDeSucre.tif  IconCatapulte.tif  IconHouse.tif  IconLancier.tif  IconPlane.tif  IconTour_2.tif
Assets/VFX/: Attack_Catapulte.PSAsset  Death_Plane.PSAsset  Fragment_Projectile.PSAsset  Hit_All.PSAsset  Target_Mouse_Red.PSAsset
CookieEngine/: CMakeLists.txt
CookieEngine/include/: Editor.hpp  Game.hpp
CookieEngine/include/Core/: Debug.hpp  Input.hpp  Primitives.hpp  Primitives.inl  Sphere.inl  Time.hpp  Window.hpp
CookieEngine/include/Core/Math/: Calc.hpp  Mat4.hpp  Mat4.inl  Quat.hpp  Quat.inl  Vec2.hpp  Vec2.inl  Vec3.hpp  Vec3.inl  Vec4.hpp
CookieEngine/include/ECS/: ComponentEditor.hpp  ComponentGameplay.hpp  ComponentGameplay.inl  ComponentHandler.hpp  ComponentHandler.inl  ComponentModel.hpp  ComponentPhysics.hpp  ComponentScript.hpp  ComponentTransform.hpp  ComponentTransform.inl  Coordinator.hpp  EntityHandler.hpp
CookieEngine/include/Gameplay/: AIBehavior.hpp  AIStep.hpp  ArmyCoordinator.hpp  ArmyHandler.hpp  CGPAttack.hpp  CGPLive.hpp  CGPMove.hpp  CGPProducer.hpp  CGPResource.hpp  CGPWorker.hpp  Income.hpp  PlayerData.hpp
CookieEngine/include/Physics/: PhysicsHandle.hpp  PhysicsSimulator.hpp
CookieEngine/include/Render/: Camera.hpp  Camera.inl  D3D11Helper.hpp  DebugRenderer.hpp  DrawDataHandler.hpp  FrameBuffer.hpp  Light.hpp  Renderer.hpp  RendererRemote.hpp  ShadowBuffer.hpp
CookieEngine/include/Render/Drawers/: DirLightDrawer.hpp  FBODrawer.hpp  MapDrawer.hpp  MiniMapDrawer.hpp  MiniModelDrawer.hpp  ModelDrawer.hpp  PlayerDrawer.hpp  PointLightDrawer.hpp  SelectionDrawer.hpp  Skybox.hpp
CookieEngine/include/Render/RenderPass/: ComposePass.hpp  GameplayPass.hpp  GeometryPass.hpp  LightPass.hpp  MiniMapPass.hpp  ParticlesPass.hpp  ShadowPass.hpp
CookieEngine/include/Resources/: Loader.hpp  Map.hpp  MapExplorerHelper.hpp  Mesh.hpp  Prefab.hpp  ResourcesManager.hpp  Scene.hpp  Script.hpp  Script.inl  Serialization.hpp  Sound.hpp  SoundManager.hpp  Texture.hpp
CookieEngine/include/Resources/Particles/: ParticlesData.hpp  ParticlesEmitter.hpp  ParticlesGenerator.hpp  ParticlesHandler.hpp  ParticlesSystem.hpp  ParticlesUpdate.hpp
CookieEngine/include/UI/: CustomImWidget.hpp  UIcore.hpp  UIeditor.hpp  UIeditor_AllIn.hpp  UIgame_AllIn.hpp  UImenu.hpp  UIscene.hpp
CookieEngine/include/UI/Widgets/: UIwidgetBases.hpp  UIwidgets.hpp
CookieEngine/include/UI/Widgets/EditorWs/: AIBehaviorEditorWidget.hpp  ConsoleWidget.hpp  FileExplorerWidget.hpp  GameUIeditorWidget.hpp  GameportWidget.hpp  HierarchyWidget.hpp  InspectorWidget.hpp  ParticleEditorWidget.hpp  SoundOrchestratorWidget.hpp  TextureEditorWidget.hpp  ToolbarWidget.hpp  ViewportWidget.hpp  WorldSettingsWidget.hpp
CookieEngine/include/UI/Widgets/GameWs/: ActionPanelWidget.hpp  GamespectorWidget.hpp  MinimapWidget.hpp  ResourcePanelWidgets.hpp
CookieEngine/libs/: assimp-vc142-mt.lib  zlibstatic.lib
CookieEngine/src/: Editor.cpp  Game.cpp  editorMain.cpp  gameMain.cpp
CookieEngine/src/Core/: Window.cpp
CookieEngine/src/ECS/: CMakeLists.txt  ComponentEditor.cpp  ComponentHandler.cpp  ComponentModel.cpp  ComponentPhysics.cpp  ComponentScript.cpp  Coordinator.cpp  EntityHandler.cpp
CookieEngine/src/Gameplay/: ArmyCoordinator.cpp  ArmyHandler.cpp  CGPAttack.cpp  CGPLive.cpp  CGPMove.cpp  CGPProducer.cpp  CGPWorker.cpp  CMakeLists.txt
CookieEngine/src/Physics/: PhysicsSimulator.cpp
CookieEngine/src/Render/: CMakeLists.txt  DebugRenderer.cpp  DrawDataHandler.cpp  FrameBuffer.cpp  Renderer.cpp  RendererRemote.cpp  ShadowBuffer.cpp
CookieEngine/src/Render/Drawers/: DirLightDrawer.cpp  FBODrawer.cpp  MapDrawer.cpp  MiniMapDrawer.cpp  MiniModelDrawer.cpp  ModelDrawer.cpp  PlayerDrawer.cpp  PointLightDrawer.cpp  SelectionDrawer.cpp  SkyBox.cpp
CookieEngine/src/Render/RenderPass/: ComposePass.cpp  GameplayPass.cpp  GeometryPass.cpp  LightPass.cpp  MiniMapPass.cpp  ParticlesPass.cpp  ShadowPass.cpp
CookieEngine/src/Resources/: CMakeLists.txt  Loader.cpp  Map.cpp  Mesh.cpp  ResourcesManager.cpp  Scene.cpp  Serialization.cpp  SoundManager.cpp  Texture.cpp
CookieEngine/src/Resources/Particles/: ParticlesGenerator.cpp  ParticlesHandler.cpp  ParticlesSystem.cpp  ParticlesUpdate.cpp
CookieEngine/src/UI/: CMakeLists.txt  CustomImWidget.cpp  UIcore.cpp  UIeditor.cpp  UImenu.cpp  UIscene.cpp
CookieEngine/src/UI/Widgets/: UIwidgetBases.cpp  UIwidgets.cpp
CookieEngine/src/UI/Widgets/EditorWs/: AIBehaviorEditorWidget.cpp  ConsoleWidget.cpp  FileExplorerWidget.cpp  GameUIeditorWidget.cpp  GameportWidget.cpp  HierarchyWidget.cpp  InspectorWidget.cpp  ParticleEditorWidget.cpp  SoundOrchestratorWidget.cpp  TextureEditorWidget.cpp  ToolbarWidget.cpp  ViewportWidget.cpp  WorldSettingsWidget.cpp
CookieEngine/src/UI/Widgets/GameWs/: ActionPanelWidget.cpp  GamespectorWidget.cpp  MinimapWidget.cpp  ResourcePanelWidgets.cpp
